[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "endstone-groupchat"
version = "1.0.0"
description = "GroupChat core plugin for Endstone"
requires-python = ">=3.14"
dependencies = [
    "endstone>=0.11.4"
]

[tool.setuptools]
py-modules = ["groupchat"]

[project.entry-points."endstone.plugin"]
groupchat = "groupchat:GroupChatPlugin"